Fix tdf#87889 and tdf#92535, vertical align issue when docgrid enable.

Change-Id: I2f1f7609e9ceed3804be76775eeebcddd9e443c6